--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,9 @@
     "author": "SaloneVest",
     "license": "MIT",
     "dependencies": {
+        "@coral-xyz/anchor": "^0.32.1",
         "@solana/spl-token": "^0.1.8",
-        "@solana/web3.js": "^1.95.8",
+        "@solana/web3.js": "^1.98.4",
         "bs58": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
