--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,10 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@solana/spl-token": "^0.4.14",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -61,6 +65,7 @@
     "react-day-picker": "9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
+    "react-is": "^19.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
     "socket.io-client": "^4.8.1",
