--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: cd backend && npm install && npm run build
     startCommand: cd backend && npm start
     plan: free
-    branch: main
+    branch: master
     rootDir: backend
     envVars:
       - key: NODE_ENV
