--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,15 +43,10 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@solana/spl-token": "^0.4.14",
-    "@solana/wallet-adapter-base": "^0.9.27",
-    "@solana/wallet-adapter-react": "^0.15.39",
-    "@solana/wallet-adapter-react-ui": "^0.9.39",
-    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "latest",
     "@vercel/analytics": "latest",
-    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,16 +54,14 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "^16.0.10",
+    "next": "16.0.3",
     "next-themes": "^0.4.6",
-    "react": "^19.2.3",
+    "react": "19.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^19.2.3",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.60.0",
-    "react-is": "^19.2.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "latest",
-    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
